--- a/log-monitor/pom.xml
+++ b/log-monitor/pom.xml
@@ -43,12 +43,12 @@
       <groupId>org.zollty</groupId>
       <artifactId>zollty-util</artifactId>
     </dependency>
-
+    
     <dependency>
       <groupId>org.zollty</groupId>
       <artifactId>zollty-mvc</artifactId>
     </dependency>
-
+    
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
@@ -60,6 +60,11 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.zollty</groupId>
+      <artifactId>zollty-util-web</artifactId>
     </dependency>
 
   </dependencies>
