--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
       <dependency>
         <groupId>org.zollty</groupId>
         <artifactId>zollty-log</artifactId>
-        <version>1.3.0</version>
+        <version>1.4.0</version>
       </dependency>
 
 	  <dependency>
@@ -57,16 +57,28 @@
 	  </dependency>
 
 	  <dependency>
-		<groupId>org.zollty</groupId>
-		<artifactId>zollty-util</artifactId>
-		<version>2.1.0</version>
-	  </dependency>
-
-	  <dependency>
-		<groupId>org.zollty</groupId>
-		<artifactId>zollty-mvc</artifactId>
-		<version>1.3.0.RELEASE</version>
-	  </dependency>
+        <groupId>org.zollty</groupId>
+        <artifactId>zollty-util</artifactId>
+        <version>2.2.0</version>
+        <scope>system</scope>
+        <systemPath>${basedir}/../lib/zollty-util-2.2.0.jar</systemPath>
+      </dependency>
+      
+      <dependency>
+        <groupId>org.zollty</groupId>
+        <artifactId>zollty-util-web</artifactId>
+        <version>1.1.0</version>
+        <scope>system</scope>
+        <systemPath>${basedir}/../lib/zollty-util-web-1.1.0.jar</systemPath>
+      </dependency>
+      
+      <dependency>
+        <groupId>org.zollty</groupId>
+        <artifactId>zollty-mvc</artifactId>
+        <version>1.3.0.RELEASE</version>
+        <scope>system</scope>
+        <systemPath>${basedir}/../lib/zollty-mvc-1.3.0.RELEASE.jar</systemPath>
+      </dependency>
 
       <!-- Servlet -->
       <dependency>
