--- a/log-monitor-demo/src/main/resources/zollty-log.properties
+++ b/log-monitor-demo/src/main/resources/zollty-log.properties
@@ -12,7 +12,7 @@ rootLogger=TRACE,LOG4J
 
 ## OTHER Logger config
 #rootLogger=TRACE,OTHER
-#appender.OTHER.name=com.travelsky.mlf4j.log.ConsoleJdk14Logger
+#appender.OTHER.name=com.demo.mlf4j.log.ConsoleJdk14Logger
 
 ## some parent loggers for packages
 logger.org.zollty.dbk=INFO
